--- a/ECommerceWebsite/items/item1/item4.html
+++ b/ECommerceWebsite/items/item1/item4.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/items.css">
     <!--<script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>-->
     <script type="text/javascript" src="../../js/item.js"></script>
-    <title>Plain White T-shirt</title>
+    <title>Plain Green T-shirt</title>
 </head>
 
 <!--<hr>-->
@@ -23,13 +23,13 @@
     <!--set main item here-->
     <div class="pageContainer">
         <div class="itemName">
-            <h2> White Shirt</h2>
+            <h2> Green Shirt</h2>
         </div>
         <div class="productContainer">
             <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-                 src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg" alt="picture of a shirt">
+                 src="../../images/item1/tshirtGreen.jpg" alt="picture of a shirt">
             <div id="overlay" onmousemove="zoomIn(event)"
-                 style="background-image: url('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg')"></div>
+                 style="background-image: url('../../images/item1/tshirtGreen.jpg')"></div>
 
             <ul class="itemCategories">
                 <li class="productList">
@@ -41,33 +41,38 @@
                         <ul class="boxList">
                             <li class="itemList">
                                 <a class="items" href="item1.html">
-                                    <img class="itemImg" id="whiteShirt" style="border-color: red"
+                                    <img class="itemImg" id="itemDisplay1"
                                          src="http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item2.html">
-                                    <img class="itemImg" id="blackShirt" src="../../images/item1/tshirtBlack.jpg">
+                                    <img class="itemImg" id="itemDisplay2"
+                                         src="../../images/item1/tshirtBlack.jpg">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item3.html">
-                                    <img class="itemImg" id="blueShirt"src="../../images/item1/tshirtBlue.jpg">
+                                    <img class="itemImg" id="itemDisplay3"
+                                         src="../../images/item1/tshirtBlue.jpg">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item4.html">
-                                    <img class="itemImg" id="greenShirt" src="../../images/item1/tshirtGreen.jpg">
+                                    <img class="itemImg" id="itemDisplay4" style="border-color: red"
+                                         src="../../images/item1/tshirtGreen.jpg">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item5.html">
-                                    <img class="itemImg" id="greyShirt" src="../../images/item1/tshirtGrey.jpg">
+                                    <img class="itemImg" id="itemDisplay5"
+                                         src="../../images/item1/tshirtGrey.jpg">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item6.html">
-                                    <img class="itemImg" id="redShirt" src="../../images/item1/tshirtRed.jpg">
+                                    <img class="itemImg" id="itemDisplay6"
+                                         src="../../images/item1/tshirtRed.jpg">
                                 </a>
                             </li>
                         </ul>
@@ -107,13 +112,13 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('http://www.clipartkid.com/images/552/customer-feedback-for-this-store-17-past-orders-3-customer-ratings-kZzD4r-clipart.jpg', 'Plain White Shirt')" />
+                       onclick="buyItem('images/item1/tshirtGreen.jpg', 'Plain Green Shirt')" />
             </div>
         </div>
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a plain white shirt </p>
+            <p id="descriptionContent"> this is the details of a Plain Green Shirt</p>
         </div>
     </div>
 </body>
