--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -6,13 +6,13 @@
   	<title>Clothing Couture</title>
   </head>
 
-  <hr>
-  <hr>
-    <header>
-      <a class= "userOption">SignIn</a>
-      <a class= "userOption">My Orders</a>
-      <a class= "userOption">Shipping/Returns</a>
-    </header>
+  <!--<hr>-->
+  <!--<hr>-->
+    <!--<header>-->
+      <!--<a class= "userOption">SignIn</a>-->
+      <!--<a class= "userOption">My Orders</a>-->
+      <!--<a class= "userOption">Shipping/Returns</a>-->
+    <!--</header>-->
 
   <hr>
   	<h1>Clothing Couture</h1>
@@ -29,14 +29,14 @@
   	      <h4>Item 1 Name</h4>
   	    </td>
   	    <td>
-			<a href="items/items2/item2.html">
+			<a href="items/item2/item1.html">
 				<img class="image_thumbnail" src="images/item2/vneckBlack.jpg" alt="V-Neck Shirt">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 2 Name</h4>
   	    </td>
   	    <td>
-			<a href="items/item3/item3.html">
+			<a href="items/item3/item1.html">
   	      		<img class="image_thumbnail" src="images/item3/longsleeveBlack.jpg" alt="Long-Sleeved Shirt">
 			</a>
 			<h3>$10.00</h3>
@@ -45,7 +45,7 @@
   	  </tr>
   	  <tr>	
  	    <td>
-			<a href="items/item4/item4.html">
+			<a href="items/item4/item1.html">
 				<img class="image_thumbnail" src="images/item4/longsleeveVneckBlack.jpg" alt="Long-sleeved V-Neck Shirt">
 			</a>
 
@@ -53,14 +53,14 @@
   	      <h4>Item 4 Name</h4>
   	    </td>
   	    <td>
-			<a href="items/item5/item5.html">
+			<a href="items/item5/item1.html">
 				<img class="image_thumbnail" src="images/item5/hoodieBlack.jpg" alt="Hooded Shirt">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 5 Name</h4>
   	    </td>
   	    <td>
-			<a href="items/item6/item6.html">
+			<a href="items/item6/item1.html">
 				<img class="image_thumbnail" src="images/item6/jerseyBlack.jpg" alt="Jersey Shirt">
 			</a>
   	      <h3>$10.00</h3>
@@ -69,21 +69,21 @@
   	  </tr>
   	  <tr>	
  	    <td>
-			<a href="items/item1/item7.html">
+			<a href="items/item7/item1.html">
 				<img class="image_thumbnail" src="images/item7/womenchiffontopblue.png" alt="Women's Chiffon Top">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 7 Name</h4>
   	    </td>
   	    <td>
-			<a href="items/item8/item8.html">
+			<a href="items/item8/item1.html">
 				<img class="image_thumbnail" src="images/item8/womenracerbacktankorange.png" alt="Women's Racerback Top">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 8 Name</h4>
   	    </td>
   	    <td>
-			<a href="items/item9/item9.html">
+			<a href="items/item9/item1.html">
 				<img class="image_thumbnail" src="images/item9/womenofficeblue.png" alt="Women's Office Blouse">
 			</a>
   	      <h3>$10.00</h3>
@@ -92,21 +92,21 @@
   	  </tr>
   	  <tr>
  	    <td>
-			<a href="items/item10/item10.html">
+			<a href="items/item10/item1.html">
 				<img class="image_thumbnail" src="images/item10/womenpleatedblack.png" alt="Women's Pleated Blouse">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 10 Name</h4>
   	    </td>
   	    <td>
-			<a href="items/item11/item11.html">
+			<a href="items/item11/item1.html">
 				<img class="image_thumbnail" src="images/item11/womenloosefitcoffee.png" alt="Women's Loose-Fit Blouse">
 			</a>
   	      <h3>$10.00</h3>
   	      <h4>Item 11 Name</h4>
   	    </td>
   	    <td>
-			<a href="items/item12/item12.html">
+			<a href="items/item12/item1.html">
 				<img class="image_thumbnail" src="images/item12/womencasualburgundy.png" alt="Women's Casual Blouse">
 			</a>
   	      <h3>$10.00</h3>
