Fixed home.html, about.html, and contact.html

--- a/ECommerceWebsite/about.html
+++ b/ECommerceWebsite/about.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" id="about-background">
   <head>
-  	<link rel="stylesheet" type="text/css" href="css/style.css">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <link rel="stylesheet" type="text/css" href="css/about.css">
-  	<title>Clothing Couture</title>
+  	<title>About Us</title>
   </head>
 
   <body>
-  <!--<hr>
-    <header>
-      <a>SignIn</a>
-      <a>My Orders</a>
-      <a>Shipping/Returns</a>    
-    </header>
-  <hr>-->
-  <div class="container">
-    <div class="about-contents">
-		<h1>Clothing Couture</h1>
-		<hr>
+  <div class="about-container">
+  <div class="about-logo">
+	<h1>Clothing Couture</h1>
+  </div>
+  <hr>
 
-			<p title="About Us">About Us</p>
-		  <div class="about-description">
-			  <p>We want to help you feel better by looking better. Our business was established in 2017. Our goal is to
-				  sell stylish, high-quality clothes that are also comfortable and easy for our customers to wear.
-			  </p>
-		  </div>
-			<p>We appreciate your business.</p>
-			<p>-- Clothing Couture Team</p>
-		<footer>
-			<hr>
-			<a>about us</a>
-			<a>contact us</a>
-		</footer>
-	</div>
+  <div class="about-contents">
+    <p title="About Us">About Us</p>
+	<p>We want to help you feel better by looking better. Our business was established in 2017. Our goal is to
+		sell stylish, high-quality clothes that are also comfortable and easy for our customers to wear.</p>
+    <p>We appreciate your business.</p>
+	<p>-- Clothing Couture Team</p>
+  </div>
+  <hr>
+
+  <div class="about-footer">
+    <a href="about.html">about us</a>
+	<a href="contact.html">contact us</a>
   </div>
 
+  </div>
   </body>
 </html>
