--- a/ECommerceWebsite/home.html
+++ b/ECommerceWebsite/home.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html lang="en-US" id="home_background">
+<html lang="en-US" id="home-background">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/home.css">
-    <title>Clothing Couture</title>
+    <title>Home</title>
 </head>
 
 <body>
-  <div class="container">
-      <div class="home-contents">
+  <div class="home-container">
+    <div class="home-logo">
       <h1>Clothing Couture</h1>
-    <hr>
-    <p>Style. Comfort. Easy.</p>
-    <a class="btn" href="items_list.html">Enter</a>
-      <footer>
-          <hr>
-          <a href="about.html">about us</a>
-          <a href="contact.html">contact us</a>
-      </footer>
-      </div>
-  </div>
-</body>
+    </div>
+  <hr>
 
+    <div class="home-contents">
+      <p id="home-hook">Style. Comfort. Easy.</p>
+      <a href="items_list.html">Enter</a>
+    </div>
+  <hr>
+
+    <div class="home-footer">
+      <a href="about.html">about us</a>
+      <a href="contact.html">contact us</a>
+    </div>
+  </div>
+
+</body>
 </html>
