--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -1,24 +1,197 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en-US" id="items-background">
+
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   	<link rel="stylesheet" type="text/css" href="css/style.css">
-	  <script language="JavaScript" type="text/javascript" src="/js/index.js"></script>
-  	<title>Clothing Couture</title>
+	<script language="JavaScript" type="text/javascript" src="/js/index.js"></script>
+  	<title>Items List</title>
   </head>
 
-  <!--<hr>-->
-  <!--<hr>-->
-    <!--<header>-->
-      <!--<a class= "userOption">SignIn</a>-->
-      <!--<a class= "userOption">My Orders</a>-->
-      <!--<a class= "userOption">Shipping/Returns</a>-->
-    <!--</header>-->
+  <body>
+  <div class="items-container">
+    <div class="items-logo">
+      <h1>Clothing Couture</h1>
+    </div>
+	<hr>
 
-  <hr>
-  	<h1>Clothing Couture</h1>
-  	<hr>
+	<div class="items-contents">
+    <table>
+      <tr>
+        <td> <!-- [0][0]-->
+          <div class="image_thumbnail">
+			  <a href="items/item1/item1.html">
+			    <img class="image_thumbnail" src="images/item1/tshirtBlack.jpg" alt="T-Shirt">
+			  </a>
+		  </div>
+		  <div class="items-name">
+			  <p>Men's Plain T-Shirt</p>
+		  </div>
+		  <div class="items-price">
+			  <p>$5.95</p>
+		  </div>
+		</td>
+		<td> <!-- [0][1]-->
+          <div class="image_thumbnail">
+		    <a href="items/item2/item1.html">
+			  <img class="image_thumbnail" src="images/item2/vneckBlack.jpg" alt="V-Neck Shirt">
+			</a>
+		  </div>
+		  <div class="items-name">
+		    <p>Men's V-Neck Shirt</p>
+		  </div>
+		  <div class="items-price">
+		    <p>$5.95</p>
+		  </div>
+		</td>
+		<td> <!-- [0][2]-->
+          <div class="image_thumbnail">
+		    <a href="items/item3/item1.html">
+			  <img class="image_thumbnail" src="images/item3/longsleeveBlack.jpg" alt="Long-sleeved Shirt">
+			</a>
+		  </div>
+		  <div class="items-name">
+		    <p>Men's Long-Sleeved Shirt</p>
+		  </div>
+		  <div class="items-price">
+			<p>$7.95</p>
+		  </div>
+		</td>
+        <td> <!-- [0][3]-->
+          <div class="image_thumbnail">
+		    <a href="items/item4/item1.html">
+			  <img class="image_thumbnail" src="images/item4/longsleeveVneckBlack.jpg" alt="Long-sleeved V-Neck Shirt">
+			</a>
+		  </div>
+		  <div class="items-name">
+		    <p>Men's Long-Sleeved V-Neck</p>
+		  </div>
+		  <div class="items-price">
+		    <p>$12.95</p>
+		  </div>
+		</td>
+      </tr>
+      <tr>
+		<td> <!-- [1][0]-->
+          <div class="image_thumbnail">
+			<a href="items/item5/item1.html">
+			  <img class="image_thumbnail" src="images/item5/hoodieBlack.jpg" alt="Hooded Shirt">
+			</a>
+		  </div>
+		  <div class="items-name">
+			<p>Men's Hooded Shirt</p>
+		  </div>
+		  <div class="items-price">
+			<p>$19.95</p>
+		  </div>
+		</td>
+		<td> <!-- [1][1]-->
+          <div class="image_thumbnail">
+		    <a href="items/item6/item1.html">
+			  <img class="image_thumbnail" src="images/item6/jerseyBlack.jpg" alt="Jersey Shirt">
+			</a>
+		  </div>
+		  <div class="items-name">
+		    <p>Men's Jersey Shirt</p>
+		  </div>
+		  <div class="items-price">
+		    <p>$14.95</p>
+		  </div>
+		</td>
+        <td> <!-- [1][2]-->
+          <div class="image_thumbnail">
+			<a href="items/item7/item1.html">
+			  <img class="image_thumbnail" src="images/item7/womenchiffontopblue.png" alt="Chiffon Blouse">
+			</a>
+		  </div>
+		  <div class="items-name">
+			<p>Women's Chiffon Blouse</p>
+		  </div>
+		  <div class="items-price">
+			<p>$21.95</p>
+		  </div>
+		</td>
+		<td> <!-- [1][3]-->
+		  <div class="image_thumbnail">
+			<a href="items/item8/item1.html">
+			  <img class="image_thumbnail" src="images/item8/womenracerbacktankorange.png" alt="Racerback Top">
+			</a>
+		  </div>
+          <div class="items-name">
+			<p>Women's Racerback Top</p>
+		  </div>
+		  <div class="items-price">
+			<p>$12.95</p>
+		  </div>
+		</td>
+      </tr>
+      <tr>
+		<td> <!-- [2][0]-->
+          <div class="image_thumbnail">
+			<a href="items/item9/item1.html">
+			  <img class="image_thumbnail" src="images/item9/womenofficeblue.png" alt="Office Blouse">
+			</a>
+		  </div>
+		  <div class="items-name">
+			<p>Women's Office Blouse</p>
+		  </div>
+		  <div class="items-price">
+			<p>$23.95</p>
+		  </div>
+		</td>
+        <td> <!-- [2][1]-->
+          <div class="image_thumbnail">
+            <a href="items/item10/item1.html">
+              <img class="image_thumbnail" src="images/item10/womenpleatedblack.png" alt="Pleated Blouse">
+            </a>
+          </div>
+          <div class="items-name">
+            <p>Women's Pleated Blouse</p>
+          </div>
+          <div class="items-price">
+            <p>$19.95</p>
+          </div>
+        </td>
+        <td> <!-- [2][2]-->
+          <div class="image_thumbnail">
+            <a href="items/item11/item1.html">
+              <img class="image_thumbnail" src="images/item11/womenloosefitcoffee.png" alt="Loose-Fit Top">
+            </a>
+          </div>
+          <div class="items-name">
+            <p>Women's Loose-Fit Top</p>
+          </div>
+          <div class="items-price">
+            <p>$17.95</p>
+          </div>
+        </td>
+        <td> <!-- [2][3]-->
+          <div class="image_thumbnail">
+            <a href="items/item12/item1.html">
+              <img class="image_thumbnail" src="images/item12/womencasualburgundy.png" alt="Casual Top">
+            </a>
+          </div>
+          <div class="items-name">
+            <p>Women's Casual Top</p>
+          </div>
+          <div class="items-price">
+            <p>$15.95</p>
+          </div>
+        </td>
+	  </tr>
+	</table>
+	</div>
+	<hr>
+
+	<div class="items-footer">
+      <a href="about.html">about us</a>
+	  <a href="contact.html">contact us</a>
+	</div>
+  </div>
+  </body>
+
+  <!--
   	<main>
-  	<!--<p class="path">pathname/path/</p> we can include this later -->
   	<table>
       <tr>
   	    <td>
@@ -115,10 +288,10 @@
       </tr>
   	</table>
   	</main>
-  	<footer>
-  	<hr>
-  	<a href="about.html">about us</a>
-  	<a>contact us</a>
-  	</footer>
+
+    <div class="items-footer">
+	  <a href="about.html">about us</a>
+	  <a href="contact.html">contact us</a>
+	</div>
   </body>
-</html>
+</html>-->
