--- a/ECommerceWebsite/items/item1/item1.html
+++ b/ECommerceWebsite/items/item1/item1.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
+<html lang="en-US" id="item-background">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/item.css">
+  <title>Men's Plain T-Shirt</title>
+</head>
+
+<body>
+<!--
+<div class="item-container">
+    <div class="item-logo">
+        <h1>Clothing Couture</h1>
+    </div>
+    <hr>
+
+    <div class="item-contents">
+        <p title="Item Name">Item Name</p>
+        <table>
+
+        </table>
+    </div>
+    <hr>
+
+    <div class="item-footer">
+        <a href="about.html">about us</a>
+        <a href="contact.html">contact us</a>
+    </div>
+
+</div>-->
+</body>
+</html>
+
+
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../../css/items.css">
+    <link rel="stylesheet" type="text/css" href="../../css/items.css">-->
     <!--<script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>-->
-    <script type="text/javascript" src="../../js/item.js"></script>
+ <!--   <script type="text/javascript" src="../../js/item.js"></script>
     <title>Plain White T-shirt</title>
-</head>
+</head>-->
 
-<!--<hr>-->
+<!--
 <header>
     <a class="userOption" href="../../items_list.html"> Home </a>
-    <!--<a class="userOption">SignIn</a>-->
-    <!--<a class="userOption">My Orders</a>-->
-    <!--<a class="userOption">Shipping/Returns</a>-->
 </header>
 
 <body>
     <hr>
     <h1>Clothing Couture</h1>
     <hr>
-    <!--set main item here-->
     <div class="pageContainer">
         <div class="itemName">
             <h2> White Shirt</h2>
@@ -117,4 +147,4 @@
         </div>
     </div>
 </body>
-</html>
+</html>-->
