--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -20,7 +20,7 @@
       <tr>
         <td> <!-- [0][0]-->
           <div class="image_thumbnail">
-			  <a href="items/item1/item1.html">
+			  <a href="item.html?Item_Color=images/item1/tshirtBlack.jpg">
 			    <img class="image_thumbnail" src="images/item1/tshirtBlack.jpg" alt="T-Shirt">
 			  </a>
 		  </div>
@@ -33,7 +33,7 @@
 		</td>
 		<td> <!-- [0][1]-->
           <div class="image_thumbnail">
-		    <a href="items/item2/item1.html">
+            <a href="item.html?Item_Color=images/item2/vneckBlack.jpg">
 			  <img class="image_thumbnail" src="images/item2/vneckBlack.jpg" alt="V-Neck Shirt">
 			</a>
 		  </div>
@@ -46,7 +46,7 @@
 		</td>
 		<td> <!-- [0][2]-->
           <div class="image_thumbnail">
-		    <a href="items/item3/item1.html">
+		    <a href="item.html?Item_Color=images/item3/longsleeveBlack.jpg">
 			  <img class="image_thumbnail" src="images/item3/longsleeveBlack.jpg" alt="Long-sleeved Shirt">
 			</a>
 		  </div>
@@ -59,7 +59,7 @@
 		</td>
         <td> <!-- [0][3]-->
           <div class="image_thumbnail">
-		    <a href="items/item4/item1.html">
+		    <a href="item.html?Item_Color=images/item4/longsleeveVneckBlack.jpg">
 			  <img class="image_thumbnail" src="images/item4/longsleeveVneckBlack.jpg" alt="Long-sleeved V-Neck Shirt">
 			</a>
 		  </div>
@@ -74,7 +74,7 @@
       <tr>
 		<td> <!-- [1][0]-->
           <div class="image_thumbnail">
-			<a href="items/item5/item1.html">
+			<a href="item.html?Item_Color=images/item5/hoodieBlack.jpg">
 			  <img class="image_thumbnail" src="images/item5/hoodieBlack.jpg" alt="Hooded Shirt">
 			</a>
 		  </div>
@@ -87,7 +87,7 @@
 		</td>
 		<td> <!-- [1][1]-->
           <div class="image_thumbnail">
-		    <a href="items/item6/item1.html">
+		    <a href="item.html?Item_Color=images/item6/jerseyBlack.jpg">
 			  <img class="image_thumbnail" src="images/item6/jerseyBlack.jpg" alt="Jersey Shirt">
 			</a>
 		  </div>
@@ -100,7 +100,7 @@
 		</td>
         <td> <!-- [1][2]-->
           <div class="image_thumbnail">
-			<a href="items/item7/item1.html">
+			<a href="item.html?Item_Color=images/item7/womenchiffontopblue.png">
 			  <img class="image_thumbnail" src="images/item7/womenchiffontopblue.png" alt="Chiffon Blouse">
 			</a>
 		  </div>
@@ -113,7 +113,7 @@
 		</td>
 		<td> <!-- [1][3]-->
 		  <div class="image_thumbnail">
-			<a href="items/item8/item1.html">
+			<a href="item.html?Item_Color=images/item8/womenracerbacktankorange.png">
 			  <img class="image_thumbnail" src="images/item8/womenracerbacktankorange.png" alt="Racerback Top">
 			</a>
 		  </div>
@@ -128,7 +128,7 @@
       <tr>
 		<td> <!-- [2][0]-->
           <div class="image_thumbnail">
-			<a href="items/item9/item1.html">
+			<a href="item.html?Item_Color=images/item9/womenofficeblue.png">
 			  <img class="image_thumbnail" src="images/item9/womenofficeblue.png" alt="Office Blouse">
 			</a>
 		  </div>
@@ -141,7 +141,7 @@
 		</td>
         <td> <!-- [2][1]-->
           <div class="image_thumbnail">
-            <a href="items/item10/item1.html">
+            <a href="item.html?Item_Color=images/item10/womenpleatedblack.png">
               <img class="image_thumbnail" src="images/item10/womenpleatedblack.png" alt="Pleated Blouse">
             </a>
           </div>
@@ -154,7 +154,7 @@
         </td>
         <td> <!-- [2][2]-->
           <div class="image_thumbnail">
-            <a href="items/item11/item1.html">
+            <a href="item.html?Item_Color=images/item11/womenloosefitcoffee.png">
               <img class="image_thumbnail" src="images/item11/womenloosefitcoffee.png" alt="Loose-Fit Top">
             </a>
           </div>
@@ -167,7 +167,7 @@
         </td>
         <td> <!-- [2][3]-->
           <div class="image_thumbnail">
-            <a href="items/item12/item1.html">
+            <a href="item.html?Item_Color=images/item12/womencasualburgundy.png">
               <img class="image_thumbnail" src="images/item12/womencasualburgundy.png" alt="Casual Top">
             </a>
           </div>
