--- a/ECommerceWebsite/items/item1/item3.html
+++ b/ECommerceWebsite/items/item1/item3.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/items.css">
     <!--<script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>-->
     <script type="text/javascript" src="../../js/item.js"></script>
-    <title>Plain blue T-shirt</title>
+    <title>Plain Blue T-shirt</title>
 </head>
 
 <!--<hr>-->
@@ -112,13 +112,13 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item1/tshirtBlue.jpg', 'Plain Blue Shirt')" />
+                       onclick="buyItem('images/item1/tshirtBlue.jpg', 'Plain Blue T-shirt')" />
             </div>
         </div>
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Blue Plain Shirt </p>
+            <p id="descriptionContent">4.2 oz, 100% combed ring-spun cotton with unisex fit</p>
         </div>
     </div>
 </body>
