--- a/ECommerceWebsite/items/item1/item4.html
+++ b/ECommerceWebsite/items/item1/item4.html
@@ -112,13 +112,13 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item1/tshirtGreen.jpg', 'Plain Green Shirt')" />
+                       onclick="buyItem('images/item1/tshirtGreen.jpg', 'Plain Green T-shirt')" />
             </div>
         </div>
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Plain Green Shirt</p>
+            <p id="descriptionContent">4.2 oz, 100% combed ring-spun cotton with unisex fit</p>
         </div>
     </div>
 </body>
