--- a/ECommerceWebsite/items/item10/item2.html
+++ b/ECommerceWebsite/items/item10/item2.html
@@ -100,7 +100,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Women Pleated Green  </p>
+            <p id="descriptionContent">Messic Women's V-Neck Short Sleeve T-Shirt Pleated Casual Blouse</p>
         </div>
     </div>
 </body>
