--- a/ECommerceWebsite/items/item11/item3.html
+++ b/ECommerceWebsite/items/item11/item3.html
@@ -100,7 +100,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Women Loose Fit Purple  </p>
+            <p id="descriptionContent">Women's Short Sleeve Loose-Fit Flare Hem Top</p>
         </div>
     </div>
 </body>
