--- a/ECommerceWebsite/items/item12/item2.html
+++ b/ECommerceWebsite/items/item12/item2.html
@@ -100,7 +100,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Women Casual Gray  </p>
+            <p id="descriptionContent">Women's Summer Short Sleeve Loose Casual T-Shirt</p>
         </div>
     </div>
 </body>
