--- a/ECommerceWebsite/items/item2/item3.html
+++ b/ECommerceWebsite/items/item2/item3.html
@@ -69,9 +69,10 @@
                                          src="../../images/item2/vneckRed.jpg">
                                 </a>
                             </li>
+                        </ul>
                     </div>
                 </li>
-
+            </ul>
         <li class="sizeList">
             <div class="sizeChoice">
                 <h3>Choose a Size:</h3>
@@ -111,7 +112,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Plain Yellow V-Neck T-shirt  </p>
+            <p id="descriptionContent">4.2 oz, 100% combed ring-spun cotton with unisex fit</p>
         </div>
     </div>
 </body>
