--- a/ECommerceWebsite/items/item3/item4.html
+++ b/ECommerceWebsite/items/item3/item4.html
@@ -112,7 +112,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Plain Long-sleeves Orange Shirt  </p>
+            <p id="descriptionContent">Blended cotton, comes in solid colors</p>
         </div>
     </div>
 </body>
