--- a/ECommerceWebsite/items/item4/item1.html
+++ b/ECommerceWebsite/items/item4/item1.html
@@ -94,7 +94,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Plain Long-sleeves White V-Neck Shirt  </p>
+            <p id="descriptionContent">95% cotton + 5% spandex, soft texture, fitted and extends to the waist</p>
         </div>
     </div>
 </body>
