--- a/ECommerceWebsite/items/item5/item3.html
+++ b/ECommerceWebsite/items/item5/item3.html
@@ -106,7 +106,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Grey Hoodie  </p>
+            <p id="descriptionContent">50% polyester, 25% combed ring-spun cotton, 25% rayon jersey</p>
         </div>
     </div>
 </body>
