--- a/ECommerceWebsite/items/item6/item2.html
+++ b/ECommerceWebsite/items/item6/item2.html
@@ -106,7 +106,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Jersey Green  </p>
+            <p id="descriptionContent">Polyester, Dri-Fit fabric wicks sweat while mesh ventilates.</p>
         </div>
     </div>
 </body>
