--- a/ECommerceWebsite/items/item7/item3.html
+++ b/ECommerceWebsite/items/item7/item3.html
@@ -106,7 +106,8 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Women Chiffon Top Yellow  </p>
+            <p id="descriptionContent">2015 New Style Women's Sexy Womens Casual T-shirt Short Sleeve Chiffon Tops Crew
+                Neck Loose Blouse Girl's Casual Bat Sleeve Dress</p>
         </div>
     </div>
 </body>
