--- a/ECommerceWebsite/items/item8/item1.html
+++ b/ECommerceWebsite/items/item8/item1.html
@@ -100,7 +100,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Women Racer Back Tank Orange  </p>
+            <p id="descriptionContent">Flowy Burnout or TriBlend Racerback Top</p>
         </div>
     </div>
 </body>
