--- a/ECommerceWebsite/items/item9/item1.html
+++ b/ECommerceWebsite/items/item9/item1.html
@@ -100,7 +100,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Women Office Blue  </p>
+            <p id="descriptionContent">Women's Sleeveless Shirts Summer Tops Casual Tanks V-Neck Office Wear</p>
         </div>
     </div>
 </body>
