--- a/ECommerceWebsite/items/item1/item6.html
+++ b/ECommerceWebsite/items/item1/item6.html
@@ -112,13 +112,13 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item1/tshirtRed.jpg', 'Plain Maroon Shirt')" />
+                       onclick="buyItem('images/item1/tshirtRed.jpg', 'Plain Maroon T-shirt')" />
             </div>
         </div>
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Plain Maroon Shirt</p>
+            <p id="descriptionContent">4.2 oz, 100% combed ring-spun cotton with unisex fit</p>
         </div>
     </div>
 </body>
