--- a/ECommerceWebsite/items/item2/item2.html
+++ b/ECommerceWebsite/items/item2/item2.html
@@ -112,7 +112,7 @@
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Plain Black V-Neck T-shirt </p>
+            <p id="descriptionContent">4.2 oz, 100% combed ring-spun cotton with unisex fit</p>
         </div>
     </div>
 </body>
