--- a/ECommerceWebsite/items/item7/item1.html
+++ b/ECommerceWebsite/items/item7/item1.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/items.css">
     <!--<script src='https://code.jquery.com/jquery-3.1.0.min.js'></script>-->
     <script type="text/javascript" src="../../js/item.js"></script>
-    <title> Women Chiffon Top White </title>
+    <title>Blue Chiffon Top</title>
 </head>
 
 <!--<hr>-->
@@ -23,13 +23,13 @@
     <!--set main item here-->
     <div class="pageContainer">
         <div class="itemName">
-            <h2> Women Chiffon Top White </h2>
+            <h2>Blue Chiffon Top</h2>
         </div>
         <div class="productContainer">
             <img id="imgZoom" onmousemove="zoomIn(event)" onmouseout="zoomOut()"
-                 src="../../images/item7/womenchiffontopwhite.png" alt="picture of a shirt">
+                 src="../../images/item7/womenchiffontopblue.png" alt="Blue Chiffon Top">
             <div id="overlay" onmousemove="zoomIn(event)"
-                 style="background-image: url('../../images/item7/womenchiffontopwhite.png')"></div>
+                 style="background-image: url('../../images/item7/womenchiffontopblue.png')"></div>
 
             <ul class="itemCategories">
                 <li class="productList">
@@ -42,13 +42,13 @@
                             <li class="itemList">
                                 <a class="items" href="item1.html">
                                     <img class="itemImg" id="itemDisplay1" style="border-color: red"
-                                         src="../../images/item7/womenchiffontopwhite.png">
+                                         src="../../images/item7/womenchiffontopblue.png">
                                 </a>
                             </li>
                             <li class="itemList">
                                 <a class="items" href="item2.html">
                                     <img class="itemImg" id="itemDisplay2"
-                                         src="../../images/item7/womenchiffontopblue.png">
+                                         src="../../images/item7/womenchiffontopwhite.png">
                                 </a>
                             </li>
                             <li class="itemList">
@@ -100,13 +100,14 @@
             <div id="btnContainer">
                 <p id="cost"> $10.00 </p>
                 <input id="btn" type="button" value= "BUY NOW"
-                       onclick="buyItem('images/item7/womenchiffontopwhite.png', 'Women Chiffon Top White')" />
+                       onclick="buyItem('images/item7/womenchiffontopblue.png', 'Blue Chiffon Top')" />
             </div>
         </div>
 
         <div class="descriptionContainer">
             <h3 id="descriptionHeader"> Description</h3>
-            <p id="descriptionContent"> this is the details of a Women Chiffon Top White  </p>
+            <p id="descriptionContent">2015 New Style Women's Sexy Womens Casual T-shirt Short Sleeve Chiffon Tops Crew
+                Neck Loose Blouse Girl's Casual Bat Sleeve Dress</p>
         </div>
     </div>
 </body>
