--- a/ECommerceWebsite/items_list.html
+++ b/ECommerceWebsite/items_list.html
@@ -20,20 +20,22 @@
       <tr>
         <td> <!-- [0][0]-->
           <div class="image_thumbnail">
-			  <a href="item.html?Item_Color=images/item1/tshirtBlack.jpg">
-			    <img class="image_thumbnail" src="images/item1/tshirtBlack.jpg" alt="T-Shirt">
+			  <a href="items/item1/item1.html">
+              <!--<a href="item.html?Item_Color=images/item1/tshirtBlack.jpg">-->
+			    <img class="image_thumbnail" src="images/item1/tshirtWhite.jpg" alt="T-Shirt">
 			  </a>
 		  </div>
 		  <div class="items-name">
 			  <p>Men's Plain T-Shirt</p>
 		  </div>
 		  <div class="items-price">
-			  <p>$5.95</p>
+			  <p>$10.00</p>
 		  </div>
 		</td>
 		<td> <!-- [0][1]-->
           <div class="image_thumbnail">
-            <a href="item.html?Item_Color=images/item2/vneckBlack.jpg">
+            <!--<a href="item.html?Item_Color=images/item2/vneckBlack.jpg">-->
+            <a href="items/item2/item1.html">
 			  <img class="image_thumbnail" src="images/item2/vneckBlack.jpg" alt="V-Neck Shirt">
 			</a>
 		  </div>
@@ -41,12 +43,13 @@
 		    <p>Men's V-Neck Shirt</p>
 		  </div>
 		  <div class="items-price">
-		    <p>$5.95</p>
+		    <p>$10.00</p>
 		  </div>
 		</td>
 		<td> <!-- [0][2]-->
           <div class="image_thumbnail">
-		    <a href="item.html?Item_Color=images/item3/longsleeveBlack.jpg">
+		    <!--<a href="item.html?Item_Color=images/item3/longsleeveBlack.jpg">-->
+            <a href="items/item3/item1.html">
 			  <img class="image_thumbnail" src="images/item3/longsleeveBlack.jpg" alt="Long-sleeved Shirt">
 			</a>
 		  </div>
@@ -54,12 +57,13 @@
 		    <p>Men's Long-Sleeved Shirt</p>
 		  </div>
 		  <div class="items-price">
-			<p>$7.95</p>
+			<p>$10.00</p>
 		  </div>
 		</td>
         <td> <!-- [0][3]-->
           <div class="image_thumbnail">
-		    <a href="item.html?Item_Color=images/item4/longsleeveVneckBlack.jpg">
+		    <!--<a href="item.html?Item_Color=images/item4/longsleeveVneckBlack.jpg">-->
+            <a href="items/item4/item1.html">
 			  <img class="image_thumbnail" src="images/item4/longsleeveVneckBlack.jpg" alt="Long-sleeved V-Neck Shirt">
 			</a>
 		  </div>
@@ -67,14 +71,15 @@
 		    <p>Men's Long-Sleeved V-Neck</p>
 		  </div>
 		  <div class="items-price">
-		    <p>$12.95</p>
+		    <p>$10.00</p>
 		  </div>
 		</td>
       </tr>
       <tr>
 		<td> <!-- [1][0]-->
           <div class="image_thumbnail">
-			<a href="item.html?Item_Color=images/item5/hoodieBlack.jpg">
+			<!--<a href="item.html?Item_Color=images/item5/hoodieBlack.jpg">-->
+            <a href="items/item5/item1.html">
 			  <img class="image_thumbnail" src="images/item5/hoodieBlack.jpg" alt="Hooded Shirt">
 			</a>
 		  </div>
@@ -82,12 +87,13 @@
 			<p>Men's Hooded Shirt</p>
 		  </div>
 		  <div class="items-price">
-			<p>$19.95</p>
+			<p>$10.00</p>
 		  </div>
 		</td>
 		<td> <!-- [1][1]-->
           <div class="image_thumbnail">
-		    <a href="item.html?Item_Color=images/item6/jerseyBlack.jpg">
+		    <!--<a href="item.html?Item_Color=images/item6/jerseyBlack.jpg">-->
+            <a href="items/item6/item1.html">
 			  <img class="image_thumbnail" src="images/item6/jerseyBlack.jpg" alt="Jersey Shirt">
 			</a>
 		  </div>
@@ -95,12 +101,13 @@
 		    <p>Men's Jersey Shirt</p>
 		  </div>
 		  <div class="items-price">
-		    <p>$14.95</p>
+		    <p>$10.00</p>
 		  </div>
 		</td>
         <td> <!-- [1][2]-->
           <div class="image_thumbnail">
-			<a href="item.html?Item_Color=images/item7/womenchiffontopblue.png">
+			<!--<a href="item.html?Item_Color=images/item7/womenchiffontopblue.png">-->
+            <a href="items/item7/item1.html">
 			  <img class="image_thumbnail" src="images/item7/womenchiffontopblue.png" alt="Chiffon Blouse">
 			</a>
 		  </div>
@@ -108,12 +115,13 @@
 			<p>Women's Chiffon Blouse</p>
 		  </div>
 		  <div class="items-price">
-			<p>$21.95</p>
+			<p>$10.00</p>
 		  </div>
 		</td>
 		<td> <!-- [1][3]-->
 		  <div class="image_thumbnail">
-			<a href="item.html?Item_Color=images/item8/womenracerbacktankorange.png">
+			<!--<a href="item.html?Item_Color=images/item8/womenracerbacktankorange.png">-->
+            <a href="items/item8/item1.html">
 			  <img class="image_thumbnail" src="images/item8/womenracerbacktankorange.png" alt="Racerback Top">
 			</a>
 		  </div>
@@ -121,14 +129,15 @@
 			<p>Women's Racerback Top</p>
 		  </div>
 		  <div class="items-price">
-			<p>$12.95</p>
+			<p>$10.00</p>
 		  </div>
 		</td>
       </tr>
       <tr>
 		<td> <!-- [2][0]-->
           <div class="image_thumbnail">
-			<a href="item.html?Item_Color=images/item9/womenofficeblue.png">
+			<!--<a href="item.html?Item_Color=images/item9/womenofficeblue.png">-->
+            <a href="items/item9/item1.html">
 			  <img class="image_thumbnail" src="images/item9/womenofficeblue.png" alt="Office Blouse">
 			</a>
 		  </div>
@@ -136,12 +145,13 @@
 			<p>Women's Office Blouse</p>
 		  </div>
 		  <div class="items-price">
-			<p>$23.95</p>
+			<p>$10.00</p>
 		  </div>
 		</td>
         <td> <!-- [2][1]-->
           <div class="image_thumbnail">
-            <a href="item.html?Item_Color=images/item10/womenpleatedblack.png">
+            <!--<a href="item.html?Item_Color=images/item10/womenpleatedblack.png">-->
+            <a href="items/item10/item1.html">
               <img class="image_thumbnail" src="images/item10/womenpleatedblack.png" alt="Pleated Blouse">
             </a>
           </div>
@@ -149,12 +159,13 @@
             <p>Women's Pleated Blouse</p>
           </div>
           <div class="items-price">
-            <p>$19.95</p>
+            <p>$10.00</p>
           </div>
         </td>
         <td> <!-- [2][2]-->
           <div class="image_thumbnail">
-            <a href="item.html?Item_Color=images/item11/womenloosefitcoffee.png">
+            <!--<a href="item.html?Item_Color=images/item11/womenloosefitcoffee.png">-->
+            <a href="items/item11/item1.html">
               <img class="image_thumbnail" src="images/item11/womenloosefitcoffee.png" alt="Loose-Fit Top">
             </a>
           </div>
@@ -162,12 +173,13 @@
             <p>Women's Loose-Fit Top</p>
           </div>
           <div class="items-price">
-            <p>$17.95</p>
+            <p>$10.00</p>
           </div>
         </td>
         <td> <!-- [2][3]-->
           <div class="image_thumbnail">
-            <a href="item.html?Item_Color=images/item12/womencasualburgundy.png">
+            <!--<a href="item.html?Item_Color=images/item12/womencasualburgundy.png">-->
+              <a href="items/item12/item1.html">
               <img class="image_thumbnail" src="images/item12/womencasualburgundy.png" alt="Casual Top">
             </a>
           </div>
@@ -175,7 +187,7 @@
             <p>Women's Casual Top</p>
           </div>
           <div class="items-price">
-            <p>$15.95</p>
+            <p>$10.00</p>
           </div>
         </td>
 	  </tr>
